<resources>
    <string name="app_name">Shoe Store</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="password">Password</string>
    <string name="welcome_login_tv_text">Hi,\n\nPlease login to have access to all the features</string>
    <string name="username">Username</string>
    <string name="et_username_hint">My best username</string>
    <string name="et_password_hint">My most difficult password</string>
    <string name="reset_password_text">Forgot your password?</string>
    <string name="log_in">Log in</string>
    <string name="create_account_text">Create this account</string>
    <string name="loginOrCreateTV_text">or</string>
    <string name="welcome_with_username">Welcome %1$s!</string>
    <string name="welcomeAcceptedButton_text">Sure, let\'s go!</string>
    <string name="welcomeFriendlyTV_text">Are you ready to add some shoes on the store?</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_summary_text">Here you can find some tips to use the app</string>
    <string name="first">First</string>
    <string name="instruction_first_step_text">Select the shoe that you need to add in the list and prepare a shor summary about the item to add as a short description to the consumer</string>
    <string name="then">Then</string>
    <string name="instructions_finish_text">Just as simple as that</string>
    <string name="instruction_second_step_text">Click on the plus (+) icon at the bottom right corner and fill the fields :)</string>
    <string name="start">Start</string>
    <string name="shoeList_fab_contDesc_text">Add a new shoe button</string>
    <string name="ssiShoeImage_cD">Shoe main photo</string>
    <string name="name_w_colon">Name:</string>
    <string name="description_w_colon">Description:</string>
    <string name="company_w_colon">Company:</string>
    <string name="size_w_colon">Size:</string>
    <string name="welcome">Welcome</string>
    <string name="shoes">Shoes</string>
    <string name="add_details">Add details</string>
    <string name="shoe_details">SHOE DETAILS</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>