<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Add the linear layout inside an Scrollable layout to allow
    an infinity "Description" TextView" -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".shoedetails.ShoeDetailsFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/shoe_details"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/name_w_colon" />

            <EditText
                android:id="@+id/shoeName_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck"
                tools:text="Air max" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/size_w_colon" />

            <EditText
                android:id="@+id/shoeSize_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:inputType="numberDecimal"
                tools:text="42.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/company_w_colon" />

            <EditText
                android:id="@+id/shoeCompany_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                tools:text="Nike" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/description_w_colon" />

            <EditText
                android:id="@+id/shoeDescription_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shoeDelete_bt"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:focusable="false"
                    android:text="@string/delete"
                    app:icon="@drawable/ic_delete" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shoeSave_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/save"
                    app:icon="@drawable/ic_save"
                    app:iconGravity="end" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>