<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

        <TextView
            android:id="@+id/welcomeLoginPageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/welcome_login_tv_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/etUserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/username"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeLoginPageText" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUserNameLabel" />

        <TextView
            android:id="@+id/etPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextUserName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/reset_password_text"
            android:textColor="@color/material_on_background_disabled"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/log_in"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toTopOf="@id/loginOrCreateTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordButton"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/loginOrCreateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/loginOrCreateTV_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/createAccountButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/create_account_text"
            android:backgroundTint="@color/design_default_color_secondary"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginOrCreateTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>