<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.test.shoestore.login.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.test.shoestore.welcome.WelcomeFragment"
        android:label="@string/welcome">
        <argument
            android:name="username"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.test.shoestore.instructions.InstructionsFragment"
        android:label="@string/instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.test.shoestore.shoelist.ShoeListFragment"
        android:label="@string/shoes"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.test.shoestore.shoedetails.ShoeDetailsFragment"
        android:label="@string/add_details"
        tools:layout="@layout/fragment_shoe_details" >
        <action
            android:id="@+id/action_shoeDetailsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_out_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>